@startuml
hide circle
skinparam classAttributeIconSize 0

'collection de meubles
class FurnitureCollection {
' nom de la collection
-name: string
' année de la collection
-year: int
}

' meuble
class Furniture {
' nom du meuble
-name: string
}

class WoodPiece {
' essence (de bois) utilisée
-specie:string
}

class MetalPiece{
' type de métal utilisé
-type:string

}

class PlasticPiece{
' type de plastique utilisé
-nature:straing
}

FurnitureCollection "0..1" o-->"*" Furniture
Furniture *-[#red]- "*" WoodPiece
Furniture *--> "*" MetalPiece
Furniture *--> "*" PlasticPiece

@enduml